fix JVM commnad sixe